# ComfyUI-Autocomplete-Plus

./: .env-cmdrc.json  .gitignore  .stylelintrc  LICENSE  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  stylelint.config.mjs  test.config.js
.github/workflows/: test.yml
docs/: README_jp.md
locales/en/: main.json  settings.json
locales/ja/: main.json  settings.json
locales/zh/: main.json  settings.json
locales/zh-TW/: main.json  settings.json
modules/: api.py  downloader.py
tests/js/: auto-formatter.test.js  autocomplete.test.js  flexsearch.test.js  utils.test.js
web/css/: autocomplete-plus.css  autocomplete.css
web/js/: auto-formatter.js  autocomplete.js  data.js  event-handler.js  helper.js  main.js  node-info.js  related-tags.js  searchengine.js  settings.js  similar-tags.js  utils.js
